# Aion

./: .gitignore  README.md  index.html  package-lock.json  phantom_v12.py  tailwind.config.cjs  vite.config.mjs
Aion-Launch-Review/: BUG_DESCRIPTION.md  PROJECT_OVERVIEW.md  TIMELINE.md  TREE.txt  ac-codex.bat  package.json
Aion-Launch-Review/src-tauri/: Cargo.toml
forensics/execution-env-20260629-143228/: binaries.json  env-agent-current.json  env-npm-run-env.json  processes-current.json
research/: AION_FORENSIC_FINAL_REPORT.md  AION_FORENSIC_REPORT.md  AION_ISOLATION_DIAGNOSIS.md  ARCHITECTURE.md  AUTH_FLOW.md  BACKEND_LAUNCH_REVIEW_SOURCES.md  BACKEND_STARTUP.md  BAT_vs_AION_AUTH_PERSISTENCE.md  BAT_vs_AION_ENV_DIFF.md  BAT_vs_AION_FILESYSTEM_TIMELINE.md  BAT_vs_AION_PROCESS_DIFF.md  EARLY_EXITS.md  ELECTRON_USERDATA_TRACE.md  ENVIRONMENT_DIFF.md  ENV_DIFF.md  FILESYSTEM_DIFF.md  FINAL_ROOT_CAUSE.md  FIRST_DIVERGENCE.md  HANDOVER.md  PATCH_RATIONALE.md  PATH_RESOLUTION.md  PHILOSOPHY.md  PROCESS_DIFF.md  PROCESS_GRAPH.md  PROCESS_TREE.md  PROCMON_ANALYSIS.md  REGISTRY_TRACE.md  ROOT_CAUSE.md  ROOT_CAUSE_FINAL.md  SPEC.md  STARTUP_GRAPH.md  STARTUP_PIPELINE.md  TIMELINE_DIFF.md  TIMELINE_FINAL.md  tree.txt
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  utils.rs
src/components/: Dashboard.jsx
src/store/: useProfileStore.js
tools/forensics/: aion-final-forensics.ps1  bat-vs-aion-live.ps1  codex-forensics.ps1  identity-persistence-forensics.ps1  summarize-bat-vs-aion.ps1
(+9 files in other folders)
