[package]
name = "aion"
version = "0.1.0"
description = "Aion Codex Profile Manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tauri = { version = "2", features = [] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_JobObjects",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging"
] }
